# swc

./: Cargo.toml  rust-toolchain
.github/workflows/: cargo.yml
bindings/: Cargo.toml
bindings/binding_typescript_wasm/: Cargo.toml
bundler/: Cargo.toml
crates/swc_common/: Cargo.toml
ecmascript/: Cargo.toml
examples/: usage.rs
spack/: Cargo.toml  README.md  package.json
spack/scripts/: fixture.sh
spack/src/: analysis.rs  export.rs  id.rs  import.rs  import_export.rs  lib.rs  load.rs  resolve.rs  scope.rs  transform.rs  usage_analysis.rs  util.rs
spack/src/bundler/: export.rs  import.rs  import_analysis.rs  import_handler.rs  load_transformed.rs  merge.rs  mod.rs  scope.rs  transform.rs  usage_analysis.rs
spack/src/debug/: mod.rs
spack/src/loader/: mod.rs
spack/src/loaders/: swc.rs
spack/src/normalize/: import.rs
spack/tests/: fixture.rs  webpack.rs
spack/tests/pass/alias/export-named-same-name/output/: entry.js
spack/tests/pass/alias/export-named/output/: entry.js
spack/tests/pass/basic/relative-import-const/output/: entry.js
spack/tests/pass/drop-unused/side-effect/import-multi/output/: entry.js
spack/tests/pass/import/top-level-require/seq-expr/input/: entry.js
spack/tests/pass/merge/basic/output/: entry.js
spack/tests/pass/merge/renaming/simple/output/: entry.js
spack/tests/pass/multi-entry/input/: c.js
spack/tests/pass/tree-shaking/in-module-export/output/: entry.js
spack/tests/pass/tree-shaking/preserve-import/input/: b.js
src/: error.rs  lib.rs
testing/: Cargo.toml
testing/src/: output.rs
tests/: projects.rs
(+44 files in other folders)
