[package]
name = "spack"
version = "0.0.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/swc-project/swc.git"
documentation = "https://swc-project.github.io/rustdoc/swc/"
description = "Speedy web compiler"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_atoms = { path = "../atoms" }
swc_common = { path = "../common" }
swc_ecma_ast = { path = "../ecmascript/ast", features = ["fold"] }
swc_ecma_parser = { path = "../ecmascript/parser", features = ["verify"] }
swc_ecma_utils = { path = "../ecmascript/utils" }
swc = { path = "../" }

anyhow = "1"
dashmap = "3.4.0"
rayon = "1"

[dev-dependencies]
testing = { path = "../testing" }
walkdir = "2.3.1"